add border radius to the images on lecture profiles

--- a/index.html
+++ b/index.html
@@ -1640,14 +1640,16 @@ ul.social i {
                             </div>
                             
                             <div pardot-repeatable="yes">
-                                <div class="info-card pad-x20 light-gray-bg" pardot-region="gray-block" pardot-region-type="pardot">
-                                    <h1 class="info-card__title" >Lorem, ipsum dolor.</h1>
-                                    <p class="info-card__intro" >dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime.</p>
-                                    <!-- <a href="" class="info-card__cta" ></a> -->
-                                    <br>
-                                    <div class="text-align-right" >
-                                        <a href="mailto:registrations@redandyellow.co.za?subject=I%20want%20you%20to%20call%20me%20back" class="cta-btn cta-btn--red" onclick="gtag('event', 'Click', { 'event_category': 'Email' });">Book Now</a>
-                                    </div>
+                                <div class="info-card  light-gray-bg" pardot-region="gray-block" pardot-region-type="pardot">
+                                    <div class="pad-x20">
+                                        <h1 class="info-card__title" >Lorem, ipsum dolor.</h1>
+                                        <p class="info-card__intro" >dolor sit amet consectetur adipisicing elit. Nisi aut aperiam maxime.</p>
+                                        <!-- <a href="" class="info-card__cta" ></a> -->
+                                        <br>
+                                        <div class="text-align-right" >
+                                            <a href="mailto:registrations@redandyellow.co.za?subject=I%20want%20you%20to%20call%20me%20back" class="cta-btn cta-btn--red" onclick="gtag('event', 'Click', { 'event_category': 'Email' });">Book Now</a>
+                                        </div>
+                                    </div>         
                                 </div>
                             </div>
 
